tests/compile/shader_modules/task_payload.stderr
In file included from task_payload.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:13:
In file included from function_construction.hpp:9:
inject_arguments.hpp:75:16: error: static assertion failed due to requirement '(rcgp::ShaderStage)1 == rcgp::ShaderStage::eMesh': TaskPayload is only valid for mesh shaders
   75 |         static_assert(S == ShaderStage::eMesh, "TaskPayload is only valid for mesh shaders");
      |                       ^~~~~~~~~~~~~~~~~~~~~~~
inject_arguments.hpp:179:4: note: in instantiation of function template specialization 'rcgp::inject_one_argument<rcgp::ShaderStage::eVertex, PayloadData>' requested here
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^
cti.hpp:8:3: note: expanded from macro 'constexpr_for'
    8 |                 __VA_ARGS__;                                    \
      |                 ^
function_construction.hpp:53:3: note: in instantiation of function template specialization 'rcgp::inject_arguments<rcgp::ShaderStage::eVertex, rcgp::TaskPayload<PayloadData>, rcgp::write_only_intrinsic<rcgp::SystemValue::eClipPosition, rcgp::ShaderStage::eVertex, rcgp::vector<float, 4>>>' requested here
   53 |                 inject_arguments <S> (args);
      |                 ^
inject_arguments.hpp:75:18: note: expression evaluates to '1 == 5'
   75 |         static_assert(S == ShaderStage::eMesh, "TaskPayload is only valid for mesh shaders");
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
inject_arguments.hpp:75:16: error: static assertion failed due to requirement '(rcgp::ShaderStage)3 == rcgp::ShaderStage::eMesh': TaskPayload is only valid for mesh shaders
   75 |         static_assert(S == ShaderStage::eMesh, "TaskPayload is only valid for mesh shaders");
      |                       ^~~~~~~~~~~~~~~~~~~~~~~
inject_arguments.hpp:179:4: note: in instantiation of function template specialization 'rcgp::inject_one_argument<rcgp::ShaderStage::eCompute, PayloadData>' requested here
  179 |                 (inject_one_argument <S> (std::get <Is> (args), counters), ...)
      |                  ^
cti.hpp:8:3: note: expanded from macro 'constexpr_for'
    8 |                 __VA_ARGS__;                                    \
      |                 ^
function_construction.hpp:53:3: note: in instantiation of function template specialization 'rcgp::inject_arguments<rcgp::ShaderStage::eCompute, rcgp::TaskPayload<PayloadData>, rcgp::WorkGroup<1>>' requested here
   53 |                 inject_arguments <S> (args);
      |                 ^
inject_arguments.hpp:75:18: note: expression evaluates to '3 == 5'
   75 |         static_assert(S == ShaderStage::eMesh, "TaskPayload is only valid for mesh shaders");
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
In file included from task_payload.cpp:1:
In file included from rcgp.hpp:4:
In file included from rcgp-meta.hpp:13:
In file included from function_construction.hpp:11:
return_handler.hpp:14:16: error: static assertion failed due to requirement '(rcgp::ShaderStage)1 == rcgp::ShaderStage::eTask'
   14 |         static_assert(S == ShaderStage::eTask);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~
function_construction.hpp:62:4: note: in instantiation of function template specialization 'rcgp::return_handler<rcgp::ShaderStage::eVertex, PayloadData>' requested here
   62 |                         return_handler <S> (returns, argi);
      |                         ^
return_handler.hpp:14:18: note: expression evaluates to '1 == 4'
   14 |         static_assert(S == ShaderStage::eTask);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
return_handler.hpp:14:16: error: static assertion failed due to requirement '(rcgp::ShaderStage)3 == rcgp::ShaderStage::eTask'
   14 |         static_assert(S == ShaderStage::eTask);
      |                       ^~~~~~~~~~~~~~~~~~~~~~~
function_construction.hpp:62:4: note: in instantiation of function template specialization 'rcgp::return_handler<rcgp::ShaderStage::eCompute, PayloadData>' requested here
   62 |                         return_handler <S> (returns, argi);
      |                         ^
return_handler.hpp:14:18: note: expression evaluates to '3 == 4'
   14 |         static_assert(S == ShaderStage::eTask);
      |                       ~~^~~~~~~~~~~~~~~~~~~~~
4 errors generated.
